feat: 문제 카테고라이징